--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
     "skipLibCheck": true,
     "allowJs": true,
     "noUnusedLocals": false,
-    "strictNullChecks": false
+    "strictNullChecks": false,
+    "moduleResolution": "node",
+    "esModuleInterop": true
   }
 }
