--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "WyniesiemyTo",
   "icons": [
-    { "src": "/favicon-128x128.ico", "sizes": "128x128", "type": "image/ico" },
-    { "src": "/favicon-256x256", "sizes": "256x256", "type": "image/ico" }
+    { "src": "/favicon-128x128.ico", "sizes": "128x128", "type": "image/x-icon" },
+    { "src": "/favicon-256x256.ico", "sizes": "256x256", "type": "image/x-icon" }
   ],
   "start_url": "/",
   "display": "standalone"
