--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,9 @@
   from = "/*"
   to = "/index.html"
   status = 200
+[build]
+  publish = "dist"
+
+[security]
+  # Wyłącza domyślne CSP Netlify
+  disable_content_security_policy = true
