--- a/netlify.toml
+++ b/netlify.toml
@@ -6,5 +6,15 @@
 [build]
   publish = "dist"
 
-[security]
-  disable_content_security_policy = true
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Content-Security-Policy = """
+      default-src 'self';
+      script-src 'self' 'unsafe-inline' 'unsafe-eval' data: https://www.googletagmanager.com https://www.google-analytics.com https://www.google.com/recaptcha/;
+      script-src-elem 'self' 'unsafe-inline' 'unsafe-eval' data: https://www.googletagmanager.com https://www.google-analytics.com https://www.google.com/recaptcha/api.js;
+      connect-src 'self' https://*.supabase.co https://www.googletagmanager.com https://www.google-analytics.com https://*.gstatic.com https://*.googleapis.com;
+      img-src 'self' data: https://www.google-analytics.com;
+      style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+      font-src 'self' https://fonts.gstatic.com
+    """
