--- a/netlify.toml
+++ b/netlify.toml
@@ -16,5 +16,6 @@
       connect-src 'self' https://*.supabase.co https://www.googletagmanager.com https://www.google-analytics.com https://www.google.com https://*.gstatic.com https://*.googleapis.com;
       img-src 'self' data: https://www.google-analytics.com;
       style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-      font-src 'self' https://fonts.gstatic.com
+      font-src 'self' https://fonts.gstatic.com;
+      frame-src 'self' https://www.googletagmanager.com
     """
