--- a/netlify.toml
+++ b/netlify.toml
@@ -7,16 +7,5 @@
   publish = "dist"
   command = "npm run build"
 
-[[headers]]
-  for = "/*"
   [headers.values]
-    Content-Security-Policy = """
-      default-src 'self';
-      script-src 'self' 'unsafe-inline' 'unsafe-eval' data: https://www.googletagmanager.com https://www.google-analytics.com https://www.google.com/recaptcha/;
-      script-src-elem 'self' 'unsafe-inline' 'unsafe-eval' data: https://www.googletagmanager.com https://www.google-analytics.com https://www.google.com/recaptcha/api.js https://www.gstatic.com;
-      connect-src 'self' https://*.supabase.co https://www.googletagmanager.com https://www.google-analytics.com https://www.google.com https://*.gstatic.com https://*.googleapis.com;
-      img-src 'self' data: https://www.google-analytics.com;
-      style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-      font-src 'self' https://fonts.gstatic.com;
-      frame-src 'self' https://www.googletagmanager.com
-    """
+    Content-Security-Policy = "default-src 'self'; script-src 'self' https://www.googletagmanager.com https://www.google-analytics.com https://www.googleadservices.com https://pagead2.googlesyndication.com; script-src-elem 'self' https://www.googletagmanager.com https://www.google-analytics.com; connect-src 'self' https://www.google-analytics.com https://stats.g.doubleclick.net https://www.googleadservices.com https://www.googletagmanager.com; img-src 'self' data: https://www.google-analytics.com https://pagead2.googlesyndication.com; frame-src https://www.googletagmanager.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src https://fonts.gstatic.com; object-src 'none';"
