--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
     "noUnusedLocals": false,
     "strictNullChecks": false,
     "moduleResolution": "node",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "lib": ["esnext","dom","webworker"],
+    "module": "esnext",
+    "target": "esnext"
   }
 }
