--- a/netlify.toml
+++ b/netlify.toml
@@ -10,49 +10,63 @@
 [[headers]]
   for = "/*"
   [headers.values]
-    Content-Security-Policy = '''
-      default-src 'self';
-      script-src 'self' 'unsafe-inline' 'unsafe-eval'
-        https://www.googletagmanager.com
-        https://www.google-analytics.com
-        https://www.google.com
-        https://www.gstatic.com
-        https://pagead2.googlesyndication.com
-        https://www.googleadservices.com
-        https://tagassistant.google.com;
-      script-src-elem 'self' 'unsafe-inline' 'unsafe-eval'
-        https://www.googletagmanager.com
-        https://www.google-analytics.com
-        https://pagead2.googlesyndication.com
-        https://www.googleadservices.com
-        https://www.gstatic.com
-        https://tagassistant.google.com
-        data:;
-      connect-src 'self'
-  https://puknkvmgocmjgcgjynda.supabase.co
-  https://www.googletagmanager.com
-  https://www.google-analytics.com
-  https://stats.g.doubleclick.net
-  https://www.googleadservices.com
-  https://pagead2.googlesyndication.com
-  https://tagassistant.google.com
-  https://*.googleapis.com
-  https://*.gstatic.com
-  https://*.doubleclick.net
-  https://www.google.com/ccm/collect;
-      img-src 'self' data:
-        https://www.google-analytics.com
-        https://pagead2.googlesyndication.com
-        https://googleads.g.doubleclick.net
-        https://www.googletagmanager.com
-        https://www.googleadservices.com;
-      frame-src
-        https://www.googletagmanager.com
-        https://tagassistant.google.com
-        https://www.youtube.com;
-      style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-      font-src https://fonts.gstatic.com;
-      object-src 'none';
-      base-uri 'self';
-      form-action 'self';
-    '''
+  Content-Security-Policy = """
+    default-src 'self';
+    script-src 'self' 'unsafe-inline' 'unsafe-eval'
+      https://www.googletagmanager.com
+      https://www.google-analytics.com
+      https://www.googleadservices.com
+      https://www.gstatic.com
+      https://www.google.com
+      https://www.recaptcha.net
+      https://www.youtube.com
+      https://tagassistant.google.com
+      https://pagead2.googlesyndication.com
+      data:;
+    script-src-elem 'self' 'unsafe-inline' 'unsafe-eval'
+      https://www.googletagmanager.com
+      https://www.google-analytics.com
+      https://www.googleadservices.com
+      https://www.gstatic.com
+      https://www.google.com
+      https://www.recaptcha.net
+      https://pagead2.googlesyndication.com
+      https://tagassistant.google.com
+      data:;
+    style-src 'self' 'unsafe-inline'
+      https://fonts.googleapis.com
+      https://www.googletagmanager.com
+      https://tagassistant.google.com;
+    img-src 'self' data:
+      https://www.google-analytics.com
+      https://pagead2.googlesyndication.com
+      https://googleads.g.doubleclick.net
+      https://www.googletagmanager.com
+      https://www.googleadservices.com
+      https://www.google.com
+      https://fonts.gstatic.com
+      https://www.gstatic.com;
+    font-src 'self' https://fonts.gstatic.com;
+    connect-src 'self'
+      https://puknkvmgocmjgcgjynda.supabase.co
+      https://www.google.com
+      https://www.google-analytics.com
+      https://www.googletagmanager.com
+      https://www.googleadservices.com
+      https://pagead2.googlesyndication.com
+      https://stats.g.doubleclick.net
+      https://*.gstatic.com
+      https://*.googleapis.com
+      https://*.doubleclick.net
+      https://www.recaptcha.net
+      https://tagassistant.google.com;
+    frame-src
+      https://www.google.com
+      https://www.youtube.com
+      https://www.recaptcha.net
+      https://www.googletagmanager.com;
+    object-src 'none';
+    base-uri 'self';
+    form-action 'self';
+    frame-ancestors 'self';
+  """
