--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,3 @@
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-
-[build]
-  publish = "dist"
-  command = "npm run build"
-
 [[headers]]
   for = "/*"
   [headers.values]
@@ -18,43 +9,31 @@
       https://www.googleadservices.com
       https://www.gstatic.com
       https://www.google.com
+      https://www.google.pl
       https://www.recaptcha.net
       https://www.youtube.com
       https://tagassistant.google.com
       https://pagead2.googlesyndication.com
       data:;
-    script-src-elem 'self' 'unsafe-inline' 'unsafe-eval'
-      https://www.googletagmanager.com
-      https://www.google-analytics.com
-      https://www.googleadservices.com
-      https://www.gstatic.com
-      https://www.google.com
-      https://www.recaptcha.net
-      https://pagead2.googlesyndication.com
-      https://tagassistant.google.com
-      data:;
-    style-src 'self' 'unsafe-inline'
-      https://fonts.googleapis.com
-      https://www.googletagmanager.com
-      https://tagassistant.google.com;
     img-src 'self' data:
       https://www.google-analytics.com
       https://pagead2.googlesyndication.com
       https://googleads.g.doubleclick.net
+      https://www.google.com
       https://www.google.com/pagead/
-      https://googleads.g.doubleclick.net/pagead/
-      https://googleads.g.doubleclick.net
+      https://www.google.pl
+      https://www.google.pl/pagead/
       https://googleads.g.doubleclick.net/pagead/viewthroughconversion/
       https://www.googletagmanager.com
       https://www.googleadservices.com
-      https://www.google.com
       https://fonts.gstatic.com
       https://www.gstatic.com;
-    font-src 'self' https://fonts.gstatic.com;
     connect-src 'self'
       https://puknkvmgocmjgcgjynda.supabase.co
       https://www.google.com
       https://www.google.com/pagead/
+      https://www.google.pl
+      https://www.google.pl/pagead/
       https://googleads.g.doubleclick.net
       https://www.google-analytics.com
       https://www.googletagmanager.com
@@ -68,9 +47,12 @@
       https://tagassistant.google.com;
     frame-src
       https://www.google.com
+      https://www.google.pl
       https://www.youtube.com
       https://www.recaptcha.net
       https://www.googletagmanager.com;
+    style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+    font-src https://fonts.gstatic.com;
     object-src 'none';
     base-uri 'self';
     form-action 'self';
